--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .js,.vue .",
-    "lint:fix": "eslint --fix --ext .js,.vue ."
+    "lint:fix": "eslint --fix --ext .js,.vue .",
+    "release": "standard-version"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.17.0",
@@ -23,6 +24,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.17.9"
+    "@babel/core": "^7.17.9",
+    "standard-version": "^9.3.2"
   }
 }
