--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "^7.14.5",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
@@ -24,7 +25,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.17.9",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "husky": "^7.0.4",
     "standard-version": "^9.3.2"
   }
 }
