--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-vue": "^7.18.0",
     "vue-eslint-parser": "^7.10.0"
   },
-  "author": "",
+  "author": "guowangyang",
   "license": "ISC",
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
