--- a/package.json
+++ b/package.json
@@ -1,25 +1,42 @@
 {
   "name": "eslint-config-light",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .js,.vue .",
-    "lint:fix": "eslint --fix --ext .js,.vue ."
+    "lint:fix": "eslint --fix --ext .js,.vue .",
+    "prepare": "husky install",
+    "release": "standard-version"
   },
   "dependencies": {
     "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "^7.14.5",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.13.0",
     "eslint-config-rookie": "^1.0.0",
-    "eslint-plugin-jest": "^24.5.2",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-vue": "^7.18.0",
-    "vue-eslint-parser": "^7.10.0"
+    "eslint-plugin-vue": "^9.0.1",
+    "vue-eslint-parser": "^9.0.2"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "guowangyang",
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ]
+  },
+  "license": "ISC",
+  "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.4.0",
+    "standard-version": "^9.3.2"
+  }
 }
