--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint --ext .js,.vue .",
     "lint:fix": "eslint --fix --ext .js,.vue .",
     "prepare": "husky install",
-    "release": "standard-version"
+    "release-patch": "standard-version --release-as patch",
+    "release": "npm run release-patch && git push --follow-tags origin master && npm publish"
   },
   "dependencies": {
     "@babel/core": "^7.17.9",
