feat: 整理文件夹

--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "release-patch": "standard-version --release-as patch",
     "release": "npm run release-patch && git push --follow-tags origin master && npm publish"
   },
+  "files": [
+    "README.md",
+    "CHANGELOG.md",
+    "index.js",
+    "lib"
+  ],
   "dependencies": {
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
@@ -38,6 +44,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.0",
+    "np": "^7.6.2",
     "standard-version": "^9.3.2"
   }
 }
