--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-light",
-  "version": "1.4.7",
+  "version": "1.5.1",
   "description": "开箱即用的eslint配置",
   "main": "index.js",
   "sideEffects": "false",
@@ -43,6 +43,7 @@
     "eslint-config-rookie": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.13.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
