--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -1,25 +1,12 @@
 {
-  "name": "eslint-config-light",
-  "version": "1.5.3",
+  "name": "eslint-config-light-vue3",
+  "version": "0.0.5",
   "description": "开箱即用的eslint配置",
   "main": "index.js",
   "sideEffects": "false",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/novlan1/eslint-config-light"
-  },
-  "bugs": {
-    "url": "https://github.com/novlan1/eslint-config-light/issues"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "homepage": "https://github.com/novlan1/eslint-config-light#readme",
   "scripts": {
     "lint": "eslint --ext .js,.vue .",
     "lint:fix": "eslint --fix --ext .js,.vue .",
-    "prepare": "husky install",
     "release-patch": "standard-version --release-as patch",
     "release": "npm run release-patch && git push --follow-tags origin master && npm publish"
   },
@@ -39,29 +26,24 @@
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "^7.14.5",
-    "eslint-config-rookie": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/eslint-config-standard": "^8.0.1",
     "eslint": "^8.13.0",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-vue": "^9.0.1",
-    "vue-eslint-parser": "^9.0.2"
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.14.0"
   },
   "lint-staged": {
     "*.js": [
       "eslint --fix"
     ]
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.4.0",
-    "standard-version": "^9.3.2"
   }
 }
