chore: 声明eslint-config-rookie

--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-light-vue3",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "开箱即用的eslint配置",
   "main": "index.js",
   "sideEffects": "false",
@@ -28,17 +28,18 @@
     "@babel/preset-react": "^7.14.5",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/eslint-config-standard": "^8.0.1",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.13.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-jest": "^26.2.2",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-config-rookie": "^1.0.1",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-vue": "^9.14.0"
   },
   "lint-staged": {
